# vax-flow

./: .env_example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: be75eebb0123_init_db.py
app/: main.py
app/api/: __init__.py
app/api/controllers/: __init__.py  agendamentos.py  agendas.py  agendas_vacinas.py  campanhas.py  campanhas_unidades.py  enderecos.py  funcionalidades.py  lotes.py  papeis.py  papeis_funcionalidades.py  unidades.py  usuarios.py  usuarios_funcionalidades.py  vacinas.py  vacinas_aplicadas.py
app/api/routes/: __init__.py  agendamentos_route.py  agendas_route.py  agendas_vacinas_route.py  campanhas_route.py  campanhas_unidades_route.py  developer_route.py  (+12 more)
app/auth/: auth.py
app/core/: __init__.py  config.py  logger.py  responses.py  router.py  security.py
app/db/: __init__.py  base_class.py  funcionalidades.py  init_db.py  session.py
app/models/: __init__.py  agendamentos_model.py  agendas_model.py  agendas_vacinas_model.py  campanhas_model.py  campanhas_unidades_model.py  enderecos_model.py  funcionalidades_model.py  lotes_model.py  papeis_funcionalidades_model.py  papeis_model.py  unidades_model.py  usuarios_funcionalidades_model.py  usuarios_model.py  vacina_model.py  vacinas_aplicadas_model.py
app/schema/: __init__.py  agendamentos_schema.py  agendas_schema.py  agendas_vacinas_schema.py  base_schema.py  campanhas_schema.py  campanhas_unidades_schema.py  enderecos_schema.py  funcionalidades_schema.py  login_schema.py  lotes_schema.py  papeis_funcionalidades_schema.py  papeis_schema.py  types_annotated.py  unidades_schema.py  usuarios_funcionalidades_schema.py  usuarios_schema.py  vacinas_aplicadas_schema.py  vacinas_schema.py
app/templates/: new_account.html  reset_password.html
app/util/: __init__.py  annotated.py  email.py  functions.py  query_parameters.py  validators.py
docs/: _01_tutorial.md  _02_comandos.md  _03_Estrutura_ de_diretorio.md  diagrama-v1.md  index.md
tests/: conftest.py  test_auth.py  test_base_class.py  test_custom_exception.py  test_database.py  test_email.py  test_file.py  test_functions.py  test_login.py  test_validators.py
tests/routers/: test_role.py  test_user.py  test_user_role.py
(+16 files in other folders)
